--- a/js_form_validator/index.html
+++ b/js_form_validator/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <title>Form Validator</title>
   </head>
@@ -22,13 +23,13 @@
         </div>
         <div class="form-control">
           <label for="password">Password</label>
-          <input type="text" id="password" placeholder="Enter password" />
+          <input type="password" id="password" placeholder="Enter password" />
           <small>Error message</small>
         </div>
         <div class="form-control">
           <label for="password2">Confirm Password</label>
           <input
-            type="text"
+            type="password"
             id="password2"
             placeholder="Enter password again"
           />
