--- a/js_exchange_rate_calculator/index.html
+++ b/js_exchange_rate_calculator/index.html
@@ -3,14 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Exchange Rate Calculator</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <img src="img/money.png" alt="money-img" />
+    <img src="img/money.png" alt="" class="money-img" />
+    <h1>Exchange Rate Calculator</h1>
+    <p>Choose the currency and the amounts to get the exchange rate</p>
 
     <div class="container">
       <div class="currency">
-        <select name="" id="currency-one">
+        <select id="currency-one">
           <option value="AED">AED</option>
           <option value="ARS">ARS</option>
           <option value="AUD">AUD</option>
@@ -68,14 +72,14 @@
       </div>
 
       <div class="swap-rate-container">
-        <button class="btn" id="rate">
+        <button class="btn" id="swap">
           Swap
         </button>
         <div class="rate" id="rate"></div>
       </div>
 
       <div class="currency">
-        <select name="" id="currency-two">
+        <select id="currency-two">
           <option value="AED">AED</option>
           <option value="ARS">ARS</option>
           <option value="AUD">AUD</option>
@@ -132,6 +136,7 @@
         <input type="number" id="amount-two" placeholder="0" />
       </div>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
