--- a/js_new_year/index.html
+++ b/js_new_year/index.html
@@ -7,7 +7,7 @@
     <title>JS New Year</title>
   </head>
   <body>
-    <div id="year" class="year"></div>
+    <div id="year" class="year">2021</div>
 
     <h1>New Year Countdown</h1>
 
