--- a/js_lyrics_searcher/index.html
+++ b/js_lyrics_searcher/index.html
@@ -7,6 +7,24 @@
     <title>JS Lyrics Searcher</title>
   </head>
   <body>
+    <header>
+      <h1>LyricsSearch</h1>
+      <form id="form">
+        <input
+          type="search"
+          id="search"
+          placeholder="Enter artist or song name..."
+        />
+        <button>Search</button>
+      </form>
+    </header>
+
+    <div id="result" class="container">
+      <p>Results will be displayed here</p>
+    </div>
+
+    <div id="more" class="container centered"></div>
+
     <script src="script.js"></script>
   </body>
 </html>
