--- a/js_memory_cards/index.html
+++ b/js_memory_cards/index.html
@@ -25,7 +25,7 @@
     </h1>
 
     <div id="cards-container" class="cards">
-      <div class="card active">
+      <!-- <div class="card active">
         <div class="inner-card">
           <div class="inner-card-front">
             <p>
@@ -53,7 +53,7 @@
             </p>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <div class="navigation">
@@ -68,7 +68,7 @@
       </button>
     </div>
 
-    <div id="add-container" class="add-container">
+    <div id="add-container" class="add-container show">
       <h1>
         Add New Card
         <button id="hide" class="btn btn-small btn-ghost">
