--- a/js_memory_cards/index.html
+++ b/js_memory_cards/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
@@ -10,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>JS Memory Cards</title>
+    <title>Memory Cards</title>
   </head>
   <body>
     <button id="clear" class="clear btn">
@@ -19,7 +20,7 @@
 
     <h1>
       Memory Cards
-      <button id="show" class="btn btn-show">
+      <button id="show" class="btn btn-small">
         <i class="fas fa-plus"></i> Add New Card
       </button>
     </h1>
@@ -68,7 +69,7 @@
       </button>
     </div>
 
-    <div id="add-container" class="add-container show">
+    <div id="add-container" class="add-container">
       <h1>
         Add New Card
         <button id="hide" class="btn btn-small btn-ghost">
