:recycle::art: Added some styling to the UI

--- a/js_hangman_game/index.html
+++ b/js_hangman_game/index.html
@@ -29,7 +29,7 @@
         <line x1="140" y1="150" x2="160" y2="180" class="figure-part" />
       </svg>
 
-      <div class="wrond-letters-container">
+      <div class="wrong-letters-container">
         <div id="wrong-letters">
           <p>Wrong</p>
           <span>e,r,t,y</span>
